Add links in modal

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                 <dt>July 10, 2017</dt>
                 <dd>Introduced by a Member of the National Assembly (MoNA), Ms. Jung-Jae Kim co-sponsored by nine members (Bill No. 2007883).</dd>
 
-                <dt>September 19, 2017</dt>
-                <dd>Presented at the relevant standing committee (Culture, Sports & Tourism Committee) and referred to its law review sub-committee.</dd>
+                <dt>September 19, 2017</dt> 
+                <dd>Presented at the relevant standing committee (<a href="http://cst.na.go.kr/cst/index.do" target="_blank">Culture, Sports & Tourism Committee</a>) and referred to its law review sub-committee.</dd>
 
                 <dt>September 25, 2017</dt>
                 <dd>presented to the law review sub-committee.</dd>
@@ -96,11 +96,11 @@
                 <dt>December 1, 2017</dt>
                 <dd>General meeting of the Culture, Sports & Tourism Committee which adopted the committee’s bill.</dd>
 
-                <dt>September 20, 2018</dt>
-                <dd>Presented to the Legislation and Judiciary Committee, the final gate before the plenary session of the National Assembly. Curiously, the official meeting record said that the committee’s bill was decided to pass as it was. This record is wrong because the bill was referred to the 2nd sub-committee of the Legislation and Judiciary Committee and is still pending as shown below.</dd>
+                <dt>September 20, 2018</dt> 
+                <dd>Presented to <a href="http://legislation.na.go.kr/legislation/index.do" target="_blank">the Legislation and Judiciary Committee</a>, the final gate before the plenary session of the National Assembly. Curiously, the official meeting record said that the committee’s bill was decided to pass as it was. This record is wrong because the bill was referred to the 2nd sub-committee of the Legislation and Judiciary Committee and is still pending as shown below.</dd>
 
-                <dt>November 11, 2018</dt>
-                <dd>At the 2nd sub-committee of Legislation and Judiciary Committee, objections of the communication authorities (specifically, Korea Communication Standard Commission) were delivered to the members. The objections were based on the concerns that blocking the measure may prohibit access to non-illegal material and bring about a conflict with the right to freedom of expression. Most of the committee members agreed the necessity of stronger copyright protection but questioned the legitimacy of the blocking power being transferred from the communication authorities to the copyright authorities. So the 2nd sub-committee decided to continue the discussion and asked intergovernmental consultation to address different stances on the bill.</dd>
+                <dt>November 11, 2018</dt> 
+                <dd>At the 2nd sub-committee of Legislation and Judiciary Committee, objections of the communication authorities (specifically, <a href="http://www.kocsc.or.kr/eng/mainPage.do" target="_blank">Korea Communication Standard Commission</a>) were delivered to the members. The objections were based on the concerns that blocking the measure may prohibit access to non-illegal material and bring about a conflict with the right to freedom of expression. Most of the committee members agreed the necessity of stronger copyright protection but questioned the legitimacy of the blocking power being transferred from the communication authorities to the copyright authorities. So the 2nd sub-committee decided to continue the discussion and asked intergovernmental consultation to address different stances on the bill.</dd>
 
                 <dt>As of March 22, 2019</dt>
                 <dd>There has been no further discussions at the Legislation and Judiciary Committee. The 2nd committee is supposed to have a meeting on March 26th and April 3rd.</dd>
