Hidden lang link

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navLinkLang">
                   <a class="dropdown-item" href="#">English</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">한국어</a>
+                  <!-- <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">한국어</a> -->
                 </div>
               </li>
             </ul>
@@ -368,7 +368,7 @@
       </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
