--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     <meta name="description" content="This website was created to oppose the Korean government's attempts to censor the Internet." />
     <meta name="image" content="./images/meta.jpg" />
 
-    <link rel="canonical" href="https://stopinternetcensoring.org/">
+    <link rel="canonical" href="https://stopinternetcensoring.org/" />
 
-    <meta itemprop="name" content="Stop Internet Censoring">
+    <meta itemprop="name" content="Stop Internet Censoring" />
     <meta itemprop="description" content="This website was created to oppose the Korean government's attempts to censor the Internet.">
     <meta itemprop="image" content="./images/meta.jpg" />
 
     <meta property="og:url" content="https://stopinternetcensoring.org/">
-    <meta property="og:type" content="website">
+    <meta property="og:type" content="website" />
     <meta property="og:title" content="Stop Internet Censoring" />
     <meta property="og:description" content="This website was created to oppose the Korean government's attempts to censor the Internet." />
     <meta property="og:image" content="./images/meta.jpg" />
-    <meta property="og:image:alt" content="Stop Internet Censoring">
-    <meta property="og:site_name" content="Stop Internet Censoring">
+    <meta property="og:image:alt" content="Stop Internet Censoring" />
+    <meta property="og:site_name" content="Stop Internet Censoring" />
     <meta property="fb:app_id" content="" />
 
     <meta name="twitter:card" content="website"/>
@@ -31,8 +31,8 @@
     <meta name="twitter:creator" content="@" />
     <meta name="twitter:image" content="./images/meta.jpg" />
 
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
