Change nav links and share links in timeline

--- a/timeline.html
+++ b/timeline.html
@@ -58,12 +58,12 @@
                 </div>
                 <div class="modal-body bg-dark text-white py-5 d-flex justify-content-around text-center">
                     <div class="sns_icon"
-                        onclick="window.open('http://www.facebook.com/sharer/sharer.php?u=https%3A//stopinternetcensoring.org/&title=Stop%20Internet%20Censoring','popUpWindow','width=580, height=500, resizable=yes,scrollbars=yes,toolbar=yes,menubar=no,location=no,directories=no, status=yes');">
+                        onclick="window.open('http://www.facebook.com/sharer/sharer.php?u=https%3A//stopinternetcensoring.org/timeline.html&title=Stop%20Internet%20Censoring','popUpWindow','width=580, height=500, resizable=yes,scrollbars=yes,toolbar=yes,menubar=no,location=no,directories=no, status=yes');">
                         <img src="images/sns_1_fb.png" alt="Facebook share icon" />
                         <div class="mt-2">facebook</div>
                     </div>
                     <div class="sns_icon"
-                        onclick="window.open('http://twitter.com/intent/tweet?status=Stop%20Internet%20Censoring%20%23Internet%5FFreedom%20%23Stop%5FInternet%5FCensoring%20%23https%5Fblock+https%3A//stopinternetcensoring.org/','popUpWindow','width=500, height=300, resizable=yes,scrollbars=yes,toolbar=yes,menubar=no,location=no,directories=no, status=yes');">
+                        onclick="window.open('http://twitter.com/intent/tweet?status=Stop%20Internet%20Censoring%20%23Internet%5FFreedom%20%23Stop%5FInternet%5FCensoring%20%23https%5Fblock+https%3A//stopinternetcensoring.org/timeline.html','popUpWindow','width=500, height=300, resizable=yes,scrollbars=yes,toolbar=yes,menubar=no,location=no,directories=no, status=yes');">
                         <img src="images/sns_2_twitter.png" alt="Twitter share icon" />
                         <div class="mt-2">twitter</div>
                     </div>
@@ -92,13 +92,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav align-items-center ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link smooth" href="index.html/#about">About</a>
+                        <a class="nav-link" href="/#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link smooth" href="#take_action">Take Action</a>
+                        <a class="nav-link" href="/#take_action">Take Action</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link smooth" href="#sponsors">Sponsors</a>
+                        <a class="nav-link" href="/#sponsors">Sponsors</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link btn btn-outline-primary rounded-pill" href="#" data-toggle="modal"
@@ -136,11 +136,11 @@
                     <div class="rect"></div>
                 </div>
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a class="smooth" href="#bill">Proposed Bill</a></li>
-                    <li class="breadcrumb-item"><a class="smooth" href="#rights">Infringement of Basic Rights</a></li>
-                    <li class="breadcrumb-item"><a class="smooth" href="#supporters">Bill Supporters</a></li>
-                    <li class="breadcrumb-item"><a class="smooth" href="#lack">Lack of Fairness and Legitimacy</a></li>
-                    <li class="breadcrumb-item"><a class="smooth" href="#take_action">Take Action</a></li>
+                    <li class="breadcrumb-item"><a href="/#bill">Proposed Bill</a></li>
+                    <li class="breadcrumb-item"><a href="/#rights">Infringement of Basic Rights</a></li>
+                    <li class="breadcrumb-item"><a href="/#supporters">Bill Supporters</a></li>
+                    <li class="breadcrumb-item"><a href="/#lack">Lack of Fairness and Legitimacy</a></li>
+                    <li class="breadcrumb-item"><a href="/#take_action">Take Action</a></li>
                 </ol>
             </nav>
 
@@ -228,11 +228,11 @@
             <div class="footer_font">
                 SHARE VIA
                 <div class="sns_icon"
-                    onclick="window.open('http://www.facebook.com/sharer/sharer.php?u=https%3A//stopinternetcensoring.org/&title=Stop%20Internet%20Censoring','popUpWindow','width=580, height=500, resizable=yes,scrollbars=yes,toolbar=yes,menubar=no,location=no,directories=no, status=yes');">
+                    onclick="window.open('http://www.facebook.com/sharer/sharer.php?u=https%3A//stopinternetcensoring.org/timeline.html&title=Stop%20Internet%20Censoring','popUpWindow','width=580, height=500, resizable=yes,scrollbars=yes,toolbar=yes,menubar=no,location=no,directories=no, status=yes');">
                     <img src="images/sns_1_fb.png" alt="Facebook share icon">
                 </div>
                 <div class="sns_icon"
-                    onclick="window.open('http://twitter.com/intent/tweet?status=Stop%20Internet%20Censoring%20%23Internet%5FFreedom%20%23Stop%5FInternet%5FCensoring%20%23https%5Fblock+https%3A//stopinternetcensoring.org/','popUpWindow','width=500, height=300, resizable=yes,scrollbars=yes,toolbar=yes,menubar=no,location=no,directories=no, status=yes');">
+                    onclick="window.open('http://twitter.com/intent/tweet?status=Stop%20Internet%20Censoring%20%23Internet%5FFreedom%20%23Stop%5FInternet%5FCensoring%20%23https%5Fblock+https%3A//stopinternetcensoring.org/timeline.html','popUpWindow','width=500, height=300, resizable=yes,scrollbars=yes,toolbar=yes,menubar=no,location=no,directories=no, status=yes');">
                     <img src="images/sns_2_twitter.png" alt="Twitter share icon">
                 </div>
                 <div class="sns_icon copy_url">
@@ -462,7 +462,7 @@
             document.body.removeChild(t);
         }
         $('.copy_url').click(function () {
-            copyToClipboard('https://stopinternetcensoring.org/');
+            copyToClipboard('https://stopinternetcensoring.org/timeline.html');
             alert('Copied url of this page!');
         });
     </script>
