Modified some text

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <section class="pb-5" id="sponsors">
           <h2 class="subtitle">Sponsors</h2>
           <p class="lead mb-5">
-            This website is sponsored by the Commons Foundation, Jinbonet, and Opennet.
+            This campaign is sponsored by the Commons Foundation, Jinbonet, and Opennet.
             <div class="row">
               <div class="col-md-4 text-center">
                 <a href="https://commons.foundation/" target="_blank">
