--- a/timeline.html
+++ b/timeline.html
@@ -161,11 +161,11 @@
                         </li>
                         <li class="mb-3">
                             <b>September 25, 2017</b><br>
-                            presented to the law review sub-committee.
+                            Presented to the law review sub-committee.
                         </li>
                         <li class="mb-3">
                             <b>November 21, 2017</b><br>
-                            At the sub-committee debate, was a committee staff director and vice-minister of the
+                            At the sub-committee debate, a committee staff director and vice-minister of the
                             Ministry of Culture, Sports and Tourism (wrongly) maintained that the proposed blocking
                             measures could be ordered in two weeks, effectively shortening two months for the current
                             ordering period. The shortening, according to them, was possible because the order can be
@@ -197,7 +197,7 @@
                             At the 2nd sub-committee of Legislation and Judiciary Committee, objections of the
                             communication authorities (specifically, <a href="http://www.kocsc.or.kr/eng/mainPage.do" target="_blank">Korea
                                 Communication Standard Commission</a>) were delivered to the
-                            members. The objections were based on the concerns that blocking the measure may prohibit
+                            members. The objections were based on the concerns that blocking measure may prohibit
                             access to non-illegal material and bring about a conflict with the right to freedom of
                             expression. Most of the committee members agreed the necessity of stronger copyright
                             protection but questioned the legitimacy of the blocking power being transferred from the
@@ -206,9 +206,9 @@
                             stances on the bill.
                         </li>
                         <li class="pb-5">
-                            <b>As of March 22, 2019</b><br>
-                            There has been no further discussions at the Legislation and Judiciary Committee. The 2nd
-                            committee is supposed to have a meeting on March 26th and April 3rd.
+                            <b>As of April 5, 2019</b><br>
+                            There has been no further discussions at the Legislation and Judiciary Committee. The 2nd committee had a meeting on
+                            March 26th and April 3rd but the bill was not put on the table.
                         </li>
                     </ul>
                 </p>
