--- a/timeline.html
+++ b/timeline.html
@@ -156,7 +156,7 @@
                         </li>
                         <li class="mb-3">
                             <b>September 19, 2017</b><br>
-                            Presented at the relevant standing committee (<a href="http://cst.na.go.kr/cst/index.do" target="_blank">Culture,
+                            Presented to the relevant standing committee (<a href="http://cst.na.go.kr/cst/index.do" target="_blank">Culture,
                                 Sports & Tourism Committee</a>) and referred to its law review sub-committee.
                         </li>
                         <li class="mb-3">
