Add timeline in GNB

--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
                 <a class="nav-link smooth" href="#about">About</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="timeline.html#timeline">Timeline</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link smooth" href="#take_action">Take Action</a>
               </li>
               <li class="nav-item">
