--- a/timeline.html
+++ b/timeline.html
@@ -95,6 +95,9 @@
                         <a class="nav-link" href="/#about">About</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#timeline">Timeline</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/#take_action">Take Action</a>
                     </li>
                     <li class="nav-item">
@@ -246,196 +249,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-    <!-- Table : Insert data to table -->
-    <script>
-        var data = [{
-            index: 1,
-            role: 'Chairperson',
-            name: 'Sangkyu Yeo',
-            party: 'Liberty Korea',
-            fb: 'http://www.facebook.com/sky435',
-            bl: 'https://blog.naver.com/bluesky435',
-            tw: 'http://twitter.com/sky435',
-            yt: ''
-        }, {
-            index: 2,
-            role: 'Administrator',
-            name: 'Kihun Song',
-            party: 'Democratic Party',
-            fb: 'http://www.facebook.com/withsong',
-            bl: 'https://blog.naver.com/peacesong1',
-            tw: '',
-            yt: ''
-        }, {
-            index: 3,
-            role: 'Administrator',
-            name: 'Doeub Kim',
-            party: 'Liberty Korea',
-            fb: 'http://www.facebook.com/ldek3525',
-            bl: 'https://blog.naver.com/ldek3525',
-            tw: '',
-            yt: ''
-        }, {
-            index: 4,
-            role: 'Administrator',
-            name: 'Sinhwan Oh',
-            party: 'Bareunmirae',
-            fb: 'http://www.facebook.com/arang301',
-            bl: 'https://blog.naver.com/arang301',
-            tw: 'http://twitter.com/arang301',
-            yt: 'http://www.youtube.com/channel/UCdIsf3t6yRTFncn79JZOXXg'
-        }, {
-            index: 5,
-            role: 'Member',
-            name: 'Taesoeb Keum',
-            party: 'Democratic Party',
-            fb: 'http://www.facebook.com/tae.s.keum',
-            bl: 'https://blog.naver.com/kts-tv',
-            tw: '',
-            yt: 'https://www.youtube.com/channel/UC2gl-I4_6wYTDLnrJtaiWAg'
-        }, {
-            index: 6,
-            role: 'Member',
-            name: 'Jongmin Kim',
-            party: 'Democratic Party',
-            fb: 'http://www.facebook.com/socmind',
-            bl: '',
-            tw: '',
-            yt: 'http://www.youtube.com/channel/UCqJAAEXFXZqlwfe-_pgQm7A'
-        }, {
-            index: 7,
-            role: 'Member',
-            name: 'Jumin Park',
-            party: 'Democratic Party',
-            fb: 'http://www.facebook.com/eunpyoung.joomin',
-            bl: '',
-            tw: 'http://twitter.com/yoeman6310',
-            yt: 'http://www.youtube.com/channel/UCoFvuvMlEPICy1ClmlgzA4g/'
-        }, {
-            index: 8,
-            role: 'Member',
-            name: 'Heyryun Baek',
-            party: 'Democratic Party',
-            fb: 'http://www.facebook.com/100hyeryun1',
-            bl: 'https://blog.naver.com/100hyeryun',
-            tw: 'http://twitter.com/100HyeRyun',
-            yt: ''
-        }, {
-            index: 9,
-            role: 'Member',
-            name: 'Chunsuk Lee',
-            party: 'Democratic Party',
-            fb: 'http://www.facebook.com/chunseog.i',
-            bl: '',
-            tw: 'http://twitter.com/lcs1747',
-            yt: ''
-        }, {
-            index: 10,
-            role: 'Member',
-            name: 'Engcheon Cho',
-            party: 'Democratic Party',
-            fb: 'http://www.facebook.com/chopros',
-            bl: 'https://blog.naver.com/chopros',
-            tw: 'http://twitter.com/chopros',
-            yt: 'http://www.youtube.com/channel/UCzDLR2GTRqNsIFSnLacmdKg?view_as=subscriber'
-        }, {
-            index: 11,
-            role: 'Member',
-            name: 'Changwon Pyo',
-            party: 'Democratic Party',
-            fb: 'http://www.facebook.com/cwpyo',
-            bl: 'https://blog.naver.com/pyogo413',
-            tw: 'http://twitter.com/drpyo',
-            yt: 'http://www.youtube.com/channel/UCvzBKm_-_SwogemHBwtQ9hA'
-        }, {
-            index: 12,
-            role: 'Member',
-            name: 'Wanyoung Lee',
-            party: 'Liberty Korea',
-            fb: 'http://www.facebook.com/wanyoung77',
-            bl: 'https://wanyoung77.blog.me/',
-            tw: 'http://twitter.com/yiwy57',
-            yt: ''
-        }, {
-            index: 13,
-            role: 'Member',
-            name: 'Eunjae Lee',
-            party: 'Liberty Korea',
-            fb: '',
-            bl: 'https://blog.naver.com/eunjaelee_korea',
-            tw: '',
-            yt: ''
-        }, {
-            index: 14,
-            role: 'Member',
-            name: 'Jewon Jang',
-            party: 'Liberty Korea',
-            fb: 'http://www.facebook.com/bravojewon',
-            bl: 'http://blog.jfirst21.com/',
-            tw: '',
-            yt: 'http://www.youtube.com/channel/UCWlCzKCE_TMyYoTIQ3BOwzg'
-        }, {
-            index: 15,
-            role: 'Member',
-            name: 'Kabyoon Jung',
-            party: 'Liberty Korea',
-            fb: 'http://www.facebook.com/mrjung2',
-            bl: '',
-            tw: '',
-            yt: ''
-        }, {
-            index: 16,
-            role: 'Member',
-            name: 'Kwangduk Ju',
-            party: 'Liberty Korea',
-            fb: 'http://www.facebook.com/jkd2311',
-            bl: 'https://blog.naver.com/jkd2311',
-            tw: '',
-            yt: 'http://www.youtube.com/channel/UCNHupER3hQEAgLG-BX4qyGg?view_as=subscriber'
-        }, {
-            index: 17,
-            role: 'Member',
-            name: 'Yi-bae Chae',
-            party: 'Bareunmirae',
-            fb: 'http://www.facebook.com/justin.chae.5',
-            bl: 'https://blog.naver.com/cyber633',
-            tw: 'http://twitter.com/cwhej',
-            yt: ''
-        }, {
-            index: 18,
-            role: 'Member',
-            name: 'Jiwon Park',
-            party: 'Peace party',
-            fb: 'http://www.facebook.com/jwp615',
-            bl: '',
-            tw: 'http://twitter.com/jwp615',
-            yt: ''
-        }];
-
-        function createRow(index, role, name, party, fb, bl, tw, yt) {
-            var _output = '';
-            _output += '<tr>';
-            _output += '<th>' + index + '</th>';
-            _output += '<td>' + role + '</td>';
-            _output += '<td>' + name + '</td>';
-            _output += '<td>' + party + '</td>';
-            _output += fb !== '' ? '<td><a class="no-deco tb_sns" target="_blank" href=' + fb + '><img src="images/tb_sns_1_fb.png" alt="Facebook link of a committee member"></a></td>' : '<td></td>';
-            _output += bl !== '' ? '<td><a class="no-deco tb_sns" target="_blank" href=' + bl + '><img src="images/tb_sns_2_blog.png" alt="Blog link of a committee member"></a></td>' : '<td></td>';
-            _output += tw !== '' ? '<td><a class="no-deco tb_sns" target="_blank" href=' + tw + '><img src="images/tb_sns_3_tw.png" alt="Twitter link of a committee member"></a></td>' : '<td></td>';
-            _output += yt !== '' ? '<td><a class="no-deco tb_sns" target="_blank" href=' + yt + '><img src="images/tb_sns_4_youtube.png" alt="Youtube link of a committee member"></a></td>' : '<td></td>';
-            _output += '</tr>';
-            return _output;
-        }
-
-        $(document).ready(function () {
-            var dataList = '';
-            data.forEach(function (v, i) {
-                dataList += createRow(v.index, v.role, v.name, v.party, v.fb, v.bl, v.tw, v.yt);
-            });
-            document.querySelector('#tableData').innerHTML = dataList;
-        });
-
-    </script>
+    
 
     <!-- Smooth Scroll -->
     <script>
