Change role of committee members

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         yt: ''
       }, {
         index: 2,
-        role: 'Administrator',
+        role: 'Ranking member',
         name: 'Kihun Song',
         party: 'Democratic Party',
         fb: 'http://www.facebook.com/withsong',
@@ -354,7 +354,7 @@
         yt: ''
       },{
         index: 3,
-        role: 'Administrator',
+        role: 'Ranking member',
         name: 'Doeub Kim',
         party: 'Liberty Korea',
         fb: 'http://www.facebook.com/ldek3525',
@@ -363,7 +363,7 @@
         yt: ''
       },{
         index: 4,
-        role: 'Administrator',
+        role: 'Ranking member',
         name: 'Sinhwan Oh',
         party: 'Bareunmirae',
         fb: 'http://www.facebook.com/arang301',
