--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                 </a>
               </div>
               <div class="col-md-4 text-center">
-                <a href="https://www.jinbo.net/" target="_blank">
+                <a href="https://opennet.or.kr/" target="_blank">
                   <img src="images/sponsor3_opennet.png" alt="Sposor logo - Jinbonet">
                 </a>
               </div>
